added modal windows for 3 models

--- a/frontend/src/components/Complaint/Complaint.css
+++ b/frontend/src/components/Complaint/Complaint.css
@@ -1,4 +1,9 @@
 .change-info-about-complaint {
+    background: green;
+    color: white;
+}
+
+.delete-info-about-complaint {
     background: #D20A11;
     color: white;
 }
