--- a/frontend/src/components/Complaint/Complaint.css
+++ b/frontend/src/components/Complaint/Complaint.css
@@ -1,9 +1,127 @@
+/* Было */
+/*.change-info-about-complaint {*/
+/*    background: green;*/
+/*    color: white;*/
+/*}*/
+
+/*.delete-info-about-complaint {*/
+/*    background: #D20A11;*/
+/*    color: white;*/
+/*}*/
+
+
+/* Стало */
+
+
+.results-container-complaint {
+    width: 100%;
+}
+
+/* Таблица */
+.table-results-complaint {
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 100%;
+}
+
+/* Заголовки таблицы */
+.table-results-complaint th {
+    color: #D20A11;
+    font-family: 'PT Astra Sans', sans-serif;
+    background: #EBE6D6;
+}
+
+/* Границы для ячеек таблицы */
+.table-results-complaint th,
+.table-results-complaint td {
+    border: 1px solid #EBE6D6;
+    padding: 0.5rem;
+    text-align: center;
+    font-size: 1rem; /* Базовый размер */
+
+}
+
+
+/* Кнопка изменения информации о жалобе*/
 .change-info-about-complaint {
     background: green;
     color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    font-size: 1rem;  /* Используем rem для шрифта */
+    cursor: pointer;
 }
 
+/* Кнопка удаления информации о жалобе */
 .delete-info-about-complaint {
     background: #D20A11;
     color: white;
+    padding: 0.5rem 1rem;
+    border-radius: 5px;
+    font-size: 1rem;  /* Используем rem для шрифта */
+    cursor: pointer;
+}
+
+.info-about-complaint {
+    font-size: 1rem;
+    font-family: 'PT Astra Sans', sans-serif;
+}
+
+
+@media (max-width: 1440px) {
+    .table-results-complaint th,
+    .table-results-complaint td {
+        font-size: 0.9rem;
+        padding: 0.4rem;
+    }
+
+    .change-info-about-complaint, .delete-info-about-complaint {
+        padding: 0.05vw 0.05vw;
+    }
+
+}
+
+
+@media (max-width: 1200px) {
+    .results-container-complaint {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .table-results-complaint {
+        display: flex;
+        width: 100%;
+        overflow-x: auto; /* Добавляем горизонтальную прокрутку при необходимости */
+    }
+
+    .table-results-complaint tbody {
+        display: flex;
+    }
+
+    .table-results-complaint tr {
+        display: flex;
+        flex-direction: column;
+        border: 1px solid #ddd;
+        margin-bottom: 0.5rem;
+        padding: 1rem;
+        border-radius: 8px;
+        background: white;
+        box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+    }
+
+    .table-results-complaint td {
+        display: flex;
+        justify-content: space-between;
+        text-align: left;
+        font-size: 1rem;
+        padding: 0.5rem 1rem;
+    }
+
+    .table-results-complaint td::before {
+        content: attr(data-label);
+        font-weight: bold;
+        color: #D20A11;
+    }
+
 }
