--- a/frontend/src/components/GeneralInformation/GeneralInformation.css
+++ b/frontend/src/components/GeneralInformation/GeneralInformation.css
@@ -210,6 +210,18 @@
     padding: 0.8vw 0.5vw; /* Размеры зависят от ширины экрана */
 }
 
+.search-elements {
+    margin-top: 20px;
+}
+
+.create-car-button {
+    margin-top: 20px;
+    width: 100%;
+    height: 40px;
+    font-family: 'PT Astra Sans', sans-serif;
+    font-size: 20px;
+}
+
 .button-info:hover {
     background: rgba(235, 230, 214, 0.76);
 }
